After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726828 - codecparsers: h264: fix SEI buffering_period() parsing
codecparsers: h264: fix SEI buffering_period() parsing
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-21 15:55 UTC by Gwenole Beauchesne
Modified: 2014-07-01 13:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
codecparsers: h264: fix SEI buffering_period() parsing (2.33 KB, patch)
2014-03-21 16:27 UTC, Gwenole Beauchesne
committed Details | Review

Description Gwenole Beauchesne 2014-03-21 15:55:59 UTC
Hi, this patch fixes parsing for buffering_period() SEI messages. The number of bits used to express {nal,vcl}_initial_cpb_removal_delay{,_offset} is not 5 but 1 + initial_cpb_removal_delay_length_minus1.
Comment 1 Gwenole Beauchesne 2014-03-21 16:27:33 UTC
Created attachment 272571 [details] [review]
codecparsers: h264: fix SEI buffering_period() parsing

I will likely push this one as obvious. Possibly propagated to the supported branches with buffering_period().
Comment 2 Gwenole Beauchesne 2014-03-21 16:30:02 UTC
This fixes a regression in the 720p Big Buck Bunny clip.
Comment 3 Sebastian Dröge (slomo) 2014-07-01 13:09:01 UTC
Is this obsoleted by the other patches?
Comment 4 Gwenole Beauchesne 2014-07-01 13:17:22 UTC
commit aa73624638b89a76b3a6d44cbb5353edc86feaac
Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com>
Date:   Fri Mar 21 17:03:36 2014 +0100

    codecparsers: h264: fix SEI buffering_period() parsing.
    
    Fix parsing of buffering_period() SEI messages. The number of bits
    used to express {nal,vcl}_initial_cpb_removal_delay{,_offset} syntax
    elements is not 5 but 1 + initial_cpb_removal_delay_length_minus1.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=726828
    
    Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>